--- a/src/sqlexecDevWeb/pages/sqlsrv/objects.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/objects.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{db}/{schema?}"
+﻿@page "{db}/{schema?}/{obj?}/{filter:int?}/{filterschema?}"
 @model Sorling.sqlexecDevWeb.pages.sqlsrv.ObjectsModel
 
 <partial name="_schemaNavSelectPartial" for="@Model" />
