--- a/src/sqlexecDevWeb/pages/sqlsrv/schemas.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/schemas.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{db}/{schema?}"
+﻿@page "{db}/{schema?}/{obj?}/{filter:int?}/{filterschema?}"
 @using Sorling.sqlexecDevWeb.models.pagemodels;
 @using Sorling.sqlexecDevWeb.pages.sqlsrv;
 @model SchemasModel
