--- a/src/sqlexecDevWeb/pages/sqlsrv/_Layout.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Sorling.sqlexecDevWeb.pages.shared.components;
+@{
     string? schema = ViewContext.RouteData.Values["schema"]?.ToString()?.Split("/").Last();
 }
 <!DOCTYPE html>
@@ -30,6 +31,8 @@
             <partial name="_themeButton" />
         </div>
     </nav>
+    
+    @await Component.InvokeAsync("TopNav")
     <div class="container">
         @RenderBody()
     </div>
