--- a/src/sqlexecDevWeb/pages/sqlsrv/_schemaNavSelectPartial.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/_schemaNavSelectPartial.cshtml
@@ -28,13 +28,13 @@
 <div class="btn-group flex-wrap">
     @if (ogroup == "tables" || ogroup == "views" || ogroup == "triggers")
     {
-        <a class="btn btn-primary@(ogroup=="tables"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/tables/{Model.DBName}/{Model.DBSchema}")">Tables</a>
-        <a class="btn btn-primary@(ogroup=="views"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/views/{Model.DBName}/{Model.DBSchema}")">Views</a>
-        <a class="btn btn-primary@(ogroup=="triggers"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/triggers/{Model.DBName}/{Model.DBSchema}")">Triggers</a>
+        <a class="btn btn-primary@(ogroup=="tables"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Tables">Tables</a>
+        <a class="btn btn-primary@(ogroup=="views"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Views">Views</a>
+        <a class="btn btn-primary@(ogroup=="triggers"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Triggers">Triggers</a>
     }
     else
     {
-        <a class="btn btn-primary@(ogroup=="tables"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/tables/{Model.DBName}/{Model.DBSchema}")">
+        <a class="btn btn-primary@(ogroup=="tables"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Tables">
             <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
                 <img src="/img/table.png" />
             </span>
@@ -44,12 +44,12 @@
     @if (ogroup == "storedprocedures" || ogroup == "functions")
     {
 
-        <a class="btn btn-primary@(ogroup=="storedprocedures"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/storedprocedures/{Model.DBName}/{Model.DBSchema}")">Stored procedures</a>
-        <a class="btn btn-primary@(ogroup=="functions"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/functions/{Model.DBName}/{Model.DBSchema}")">Functions</a>
+        <a class="btn btn-primary@(ogroup=="storedprocedures"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.StoredProcedures">Stored procedures</a>
+        <a class="btn btn-primary@(ogroup=="functions"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Functions">Functions</a>
     }
     else
     {
-        <a class="btn btn-primary@(ogroup=="storedprocedures"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/storedprocedures/{Model.DBName}/{Model.DBSchema}")">
+        <a class="btn btn-primary@(ogroup=="storedprocedures"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.StoredProcedures">
             <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
                 <img src="/img/sql.png" />
             </span>
@@ -58,13 +58,13 @@
 
     @if (ogroup == "tabletypes" || ogroup == "types" || ogroup == "defaultconstraints" || ogroup == "checkconstraints")
     {
-        <a class="btn btn-primary@(ogroup=="types"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/types/{Model.DBName}/{Model.DBSchema}")">Types</a>
-        <a class="btn btn-primary@(ogroup=="defaultconstraints"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/defaultconstraints/{Model.DBName}/{Model.DBSchema}")">Defaults</a>
-        <a class="btn btn-primary@(ogroup=="checkconstraints"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/checkconstraints/{Model.DBName}/{Model.DBSchema}")">Checks</a>
+        <a class="btn btn-primary@(ogroup=="types"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Types">Types</a>
+        <a class="btn btn-primary@(ogroup=="defaultconstraints"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.DefaultConstraints">Defaults</a>
+        <a class="btn btn-primary@(ogroup=="checkconstraints"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.CheckConstraints">Checks</a>
     }
     else
     {
-        <a class="btn btn-primary@(ogroup=="types"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/types/{Model.DBName}/{Model.DBSchema}")">
+        <a class="btn btn-primary@(ogroup=="types"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Types">
             <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
                 <img src="/img/typesnconstraints.png" />
             </span>
@@ -73,11 +73,11 @@
 
     @if (ogroup == "principals")
     {
-        <a class="btn btn-primary@(ogroup=="principals"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/principals/{Model.DBName}/{Model.DBSchema}")">Principals</a>
+        <a class="btn btn-primary@(ogroup=="principals"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Principals">Principals</a>
     }
     else
     {
-        <a class="btn btn-primary@(ogroup=="principals"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/principals/{Model.DBName}/{Model.DBSchema}")">
+        <a class="btn btn-primary@(ogroup=="principals"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Principals">
             <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
                 <img src="/img/security.png" />
             </span>
@@ -86,11 +86,11 @@
 
     @if (ogroup == "objects")
     {
-        <a class="btn btn-primary@(ogroup=="objects"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/objects/{Model.DBName}/{Model.DBSchema}")">Top-level objects</a>
+        <a class="btn btn-primary@(ogroup=="objects"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Objects">Top-level objects</a>
     }
     else
     {
-        <a class="btn btn-primary@(ogroup=="objects"?" active ":" ")flex-grow-0" href="@($"{SqlAuth.UriEscapedPath()}/objects/{Model.DBName}/{Model.DBSchema}")">
+        <a class="btn btn-primary@(ogroup=="objects"?" active ":" ")flex-grow-0" sed-page="SqlGroupFlags.Objects">
             <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
                 <img src="/img/toplevel.png" />
             </span>
@@ -99,7 +99,7 @@
 
 
     <a class="btn btn-primary dropdown-toggle flex-grow-0" aria-expanded="false" data-bs-toggle="dropdown" href="#">
-        @(string.IsNullOrWhiteSpace(Model.DBSchema) ? "All schemas" : Model.DBSchema)
+        @(string.IsNullOrWhiteSpace(Model.SchemaFolder) ? "All schemas" : Model.SchemaFolder)
     </a>
     <div class="dropdown-menu" data-bs-popper="none">
         @{
@@ -110,27 +110,27 @@
                 var hascurrent = false;
                 for (i = 0; i < list.Count() && i < GuiConsts.SCHEMAMENUNOITEMS; i++)
                 {
-                    var sch = list[i];                    
-                    if (sch == Model.DBSchema)
+                    var sch = list[i];
+                    if (sch == Model.SchemaFolder)
                     {
-                        <a class="dropdown-item active" href="@($"{SqlAuth.UriEscapedPath()}/{ogroup}/{Model.DBName}/")">@sch</a>
+                        <a class="dropdown-item active" sed-schema="" sed-project="debug">@sch</a>
                         hascurrent = true;
                     }
                     else
                     {
-                        <a class="dropdown-item" href="@($"{SqlAuth.UriEscapedPath()}/{ogroup}/{Model.DBName}/{sch}")">@sch</a>
+                        <a class="dropdown-item" sed-schema="@sch">@sch</a>
                     }
                 }                
                 <div class="dropdown-divider"></div>
-                if (!hascurrent && !string.IsNullOrWhiteSpace(Model.DBSchema))
+                if (!hascurrent && !string.IsNullOrWhiteSpace(Model.SchemaFolder))
                 {
-                    <a class="dropdown-item active" href="@($"{SqlAuth.UriEscapedPath()}/{ogroup}/{Model.DBName}/")">@Model.DBSchema</a>
+                    <a class="dropdown-item active" sed-schema="" sed-project="debug">@Model.SchemaFolder</a>
                 }
                 if (list.Count() >= GuiConsts.SCHEMAMENUNOITEMS)
                 {
-                    <a class="dropdown-item" href="@($"{SqlAuth.UriEscapedPath()}/schemas/{Model.DBName}/")">More...</a>
+                    <a class="dropdown-item" sed-page="SqlGroupFlags.Schemas">More...</a>
                 }
-                <a class="dropdown-item" href="@($"{SqlAuth.UriEscapedPath()}/{ogroup}/{Model.DBName}/")">No filter</a>
+                <a class="dropdown-item" sed-schema="">No filter</a>
             }
         }
     </div>
