--- a/src/sqlexecDevWeb/pages/sqlsrv/script.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/script.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{db}/{schema?}/{obj?}/{filter:int?}/{filterschema?}"
+﻿@page "{db}/{prj}/{schema?}/{obj?}/{filter:long?}/{filterschema?}"
 @model Sorling.sqlexecDevWeb.pages.sqlsrv.ScriptModel
 
 <form method="post">
