--- a/src/sqlexecDevWeb/pages/sqlsrv/_ViewImports.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Sorling.sqlexecDevWeb
 @inject Sorling.SqlConnAuthWeb.authentication.ISqlConnAuthenticationService SqlAuth
 
 @using Sorling.sqlexecDevWeb.extensions.sqlobjects
