--- a/src/sqlexecDevWeb/pages/sqlsrv/_itemPrevNxtPartial.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/_itemPrevNxtPartial.cshtml
@@ -7,16 +7,16 @@
     <div class="btn-group btn-group-sm container-fluid">
         @if (Model.SqlItemPrevNxt.PreviousName is not null)
         {
-            <a class="btn btn-secondary" href="@($"{SqlAuth.UriEscapedPath()}/{Model.SqlItemPrevNxt.PreviousGroup}/{Model.DBName}/{Model.SqlItemPrevNxt.PreviousSchema}/{Model.SqlItemPrevNxt.PreviousName}/{Model.FilterInt}/{Model.FilterSchema}")">&lt;&lt;Previous @Model.SqlItemPrevNxt.PreviousId</a>
+            <a class="btn btn-secondary" sed-filter-keep sed-prv-item="Model.SqlItemPrevNxt">&lt;&lt;Previous @Model.SqlItemPrevNxt.PreviousId</a>
         }
         else
         {
             <span class="btn btn-secondary disabled">&lt;&lt;Previous</span>
         }
-        <a class="btn btn-secondary" href="@($"{SqlAuth.UriEscapedPath()}/{Model.FilterGroupFlags.GetPageAction()}/{Model.DBName}/{Model.FilterSchema}")">List</a>
+        <a class="btn btn-secondary" sed-page="Model.FilterGroup">List</a>
         @if (Model.SqlItemPrevNxt.NextName is not null)
         {
-            <a class="btn btn-secondary" href="@($"{SqlAuth.UriEscapedPath()}/{Model.SqlItemPrevNxt.NextGroup}/{Model.DBName}/{Model.SqlItemPrevNxt.NextSchema}/{Model.SqlItemPrevNxt.NextName}/{Model.FilterInt}/{Model.FilterSchema}")">Next @(Model.SqlItemPrevNxt.NextId)&gt;&gt;</a>
+            <a class="btn btn-secondary" sed-filter-keep sed-nxt-item="Model.SqlItemPrevNxt">Next @(Model.SqlItemPrevNxt.NextId)&gt;&gt;</a>
         }
         else
         {
