--- a/src/sqlexecDevWeb/pages/sqlsrv/principals.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/principals.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{db}/{schema?}/{obj?}/{filter:int?}/{filterschema?}"
+﻿@page "{db}/{prj}/{schema?}/{obj?}/{filter:long?}/{filterschema?}"
 @using Sorling.sqlexecDevWeb.extensions;
 @model Sorling.sqlexecDevWeb.pages.sqlsrv.PrincipalsModel
 @{
