--- a/src/sqlexecDevWeb/pages/sqlsrv/storedprocedures.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/storedprocedures.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{db}/{schema?}/{obj?}/{filter:int?}/{filterschema?}"
+﻿@page "{db}/{prj}/{schema?}/{obj?}/{filter:long?}/{filterschema?}"
 @using Sorling.SqlExecMeta.objects
 @using Sorling.SqlExecMeta.sql2code
 @using Sorling.SqlExecMeta
