--- a/src/sqlexecDevWeb/pages/sqlsrv/types.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/types.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{db}/{schema?}/{obj?}/{filter:int?}/{filterschema?}"
+﻿@page "{db}/{prj}/{schema?}/{obj?}/{filter:long?}/{filterschema?}"
 @using Sorling.SqlExecMeta.types;
 @model Sorling.sqlexecDevWeb.pages.sqlsrv.TypesModel
 @{
