--- a/src/sqlexecDevWeb/pages/sqlsrv/index.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/index.cshtml
@@ -6,6 +6,6 @@
 <table>
     @foreach (var db in Model.DBs!)
     {
-        <tr><td><a sed-db="@db.Name" sed-page="SqlGroupFlags.Objects">@db.Name</a></td></tr>
+        <tr><td><a sed-db="@db.Name" sed-page="SqlGroupFlags.TopLevel">@db.Name</a></td></tr>
     }
 </table>
