--- a/src/sqlexecDevWeb/pages/sqlsrv/scripts.cshtml
+++ b/src/sqlexecDevWeb/pages/sqlsrv/scripts.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{db}/{prj}/{schema?}/{obj?}/{filter:long?}/{filterschema?}"
-@model Sorling.sqlexecDevWeb.pages.sqlsrv.ScriptModel
+@model Sorling.sqlexecDevWeb.pages.sqlsrv.ScriptsModel
 
 <form method="post">
     <div asp-validation-summary="All" class="text-danger"></div>
